# easeoffoos

./: Cargo.toml  README.md
src/: main.rs
src/api/: mod.rs
src/api/lorem/: data.rs  mod.rs
tests/: lorem.rs
