[package]
name = "easeoffoos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = "0.6.18"
httpc-test = "0.1.5"
rand = "0.8.5"
serde = "1.0.171"
tokio = { version = "1.29.1", features = ["full"] }
